DAGAIR-19 Fix github workflows

--- a/.github/workflows/continuous-integration.client-node.yml
+++ b/.github/workflows/continuous-integration.client-node.yml
@@ -7,7 +7,7 @@ on:
       - main
       - develop
     paths:
-      - ./src/DagAir_ClientNode/**
+      - src/DagAir_ClientNode/**
 
 jobs:
   continuous-integration:
