--- a/.github/workflows/continuous-integration.policies.yml
+++ b/.github/workflows/continuous-integration.policies.yml
@@ -7,7 +7,7 @@ on:
       - main
       - develop
     paths:
-      - ./src/DagAir_Policies/**
+      - src/DagAir_Policies/**
 
 jobs:
   continuous-integration:
