DAGAIR-19 Fix github workflows

--- a/.github/workflows/continuous-integration.policies.yml
+++ b/.github/workflows/continuous-integration.policies.yml
@@ -1,6 +1,13 @@
 name: ci.policies
 
-on: 
+on:
+  push:
+    branches:
+      - main
+      - develop
+    paths:
+      - src/DagAir_Policies/**
+
   workflow_dispatch:
 
 jobs:
