DAGAIR-19 Fix github workflows

--- a/.github/workflows/continuous-integration.webclientapp.yml
+++ b/.github/workflows/continuous-integration.webclientapp.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
       - develop
+    paths:
+      - src/DagAir_WebApplications/**
 
   workflow_dispatch: # allows to trigger workflow on demand
 
