--- a/.github/workflows/continuous-integration.ingestion-node.yml
+++ b/.github/workflows/continuous-integration.ingestion-node.yml
@@ -6,6 +6,8 @@ on:
     branches:
       - main
       - develop
+    paths:
+      - src/DagAir_IngestionNode/**
 
 jobs:
   continuous-integration:
