--- a/.github/workflows/continuous-delivery.client-node.yml
+++ b/.github/workflows/continuous-delivery.client-node.yml
@@ -1,4 +1,4 @@
-name: cd.client-node
+name: CD-Client-node
 
 env:
   SERVICE_NAME: dagair-client-node
@@ -10,7 +10,7 @@ on:
       - main
       - develop
     paths:
-      - ./src/DagAir_ClientNode/**
+      - src/DagAir_ClientNode/**
 
     workflow_dispatch:
 
