DAGAIR-19 Fix github workflows

--- a/src/DagAir_Facilities/Dockerfile
+++ b/src/DagAir_Facilities/Dockerfile
@@ -7,6 +7,7 @@ FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /app
 COPY ["./DagAir_Facilities/DagAir.Facilities/", "./DagAir_Facilities/DagAir.Facilities/"]
 COPY ["./DagAir_Facilities/DagAir.Facilities.Data/", "./DagAir_Facilities/DagAir.Facilities.Data/"]
+COPY ["./DagAir_Facilities/DagAir.Facilities.Contracts/", "./DagAir_Facilities/DagAir.Facilities.Contracts/"]
 COPY ["./DagAir_Components/DagAir.Components.ApiModels/", "./DagAir_Components/DagAir.Components.ApiModels/"]
 COPY ["./DagAir_Components/DagAir.Components.Healthchecks/", "./DagAir_Components/DagAir.Components.Healthchecks/"]
 COPY ["./DagAir_Components/DagAir.Components.Logging/", "./DagAir_Components/DagAir.Components.Logging/"]
