DAGAIR-23 Add webadminApp project, fix api services

--- a/src/DagAir_Facilities/DagAir.Facilities.Data.Migrations/appsettings.json
+++ b/src/DagAir_Facilities/DagAir.Facilities.Data.Migrations/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "Serilog": {
+    "File": {
+      "Path": "C:/DagAir_Logs/DagAir_Facilities_log.txt"
+    }
+  },
   "ConnectionStrings": {
     "DagAir.Facilities": "server=localhost;database=DagAir.Facilities;user=root;password="
   },
