--- a/src/DagAir_Facilities/DagAir.Facilities/appsettings.json
+++ b/src/DagAir_Facilities/DagAir.Facilities/appsettings.json
@@ -9,6 +9,12 @@
   "Serilog": {
     "File": {
       "Path": "C:/DagAir_Logs/DagAir_Facilities_log.txt"
-    },
-  "AllowedHosts": "*"
+    }
+  },
+  "ConnectionStrings": {
+    "DagAir.Facilities": "server=localhost;database=DagAir.Facilities;user=root;password="
+  },
+  "ConnectionKeys": {
+    "DagAir.Facilities": "12345"
+  }
 }
