--- a/src/DagAir.WebAdminApp/appsettings.json
+++ b/src/DagAir.WebAdminApp/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "File": {
+      "Path": "C:/DagAir_Logs/DagAir_PolicyNode_log.txt"
+    }
+  },
+  "serviceUrls": {
+    "DagAir.Facilities": "http://localhost:15000/"
+  }
 }
