--- a/src/DagAir_Addresses/DagAir.Addresses/Properties/launchSettings.json
+++ b/src/DagAir_Addresses/DagAir.Addresses/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:10000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:10000"
       }
     }
   }
