--- a/src/DagAir_ClientNode/DagAir.ClientNode/Properties/launchSettings.json
+++ b/src/DagAir_ClientNode/DagAir.ClientNode/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:14000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:14000"
       }
     }
   }
