--- a/src/DagAir_Policies/DagAir.Policies/Properties/launchSettings.json
+++ b/src/DagAir_Policies/DagAir.Policies/Properties/launchSettings.json
@@ -7,7 +7,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:12000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:12000"
       }
     }
   }
