--- a/src/DagAir_PolicyNode/DagAir.PolicyNode/Properties/launchSettings.json
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "https://localhost:6001;http://localhost:6000"
+        "ASPNETCORE_URLS": "http://localhost:6000"
       }
     }
   }
