--- a/src/DagAir_Sensors/DagAir.Sensors/Properties/launchSettings.json
+++ b/src/DagAir_Sensors/DagAir.Sensors/Properties/launchSettings.json
@@ -1,12 +1,4 @@
 ﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:43321",
-      "sslPort": 44364
-    }
-  },
   "profiles": {
     "DagAir.Sensors": {
       "commandName": "Project",
@@ -15,7 +7,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:9002",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:9002"
       }
     }
   }
