--- a/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
+++ b/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
@@ -15,6 +15,7 @@
     
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="10.1.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
