--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/DagAir.WebAdminApp.csproj
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/DagAir.WebAdminApp.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
     
     <ItemGroup>
+        <PackageReference Include="IdentityModel" Version="5.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3" />
