--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/appsettings.json
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/appsettings.json
@@ -12,7 +12,8 @@
     }
   },
   "serviceUrls": {
-    "DagAir.Facilities": "http://localhost:15000/"
+    "DagAir.Facilities": "https://localhost:15001/",
+    "DagAir.IdentityServer": "https://localhost:5001/"
   },
   "ConnectionStrings": {
     "IdentityDataContextConnection": "server=localhost;database=DagAir.Users;user=root;password=Rolka7Sushi"
