--- a/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.json
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.json
@@ -19,6 +19,7 @@
     "connectionName": "policy-node"
   },
   "serviceUrls": {
-    "DagAir.Policies": "http://localhost:12000/"
+    "DagAir.Policies": "http://localhost:12000/",
+    "DagAir.Facilities": "http://localhost:15000/"
   }
 }
