--- a/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.Docker.json
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.Docker.json
@@ -7,6 +7,7 @@
         "connectionName": "policy-node"
     },
     "serviceUrls": {
-        "DagAir.Policies": "http://dagair_policies_api_1:80/"
+        "DagAir.Policies": "http://dagair_policies_api_1:80/",
+        "DagAir.Facilities": "http://dagair_facilities_api_1:80/"
     }
 }
