--- a/src/DagAir_ClientNode/DagAir.ClientNode/appsettings.Docker.json
+++ b/src/DagAir_ClientNode/DagAir.ClientNode/appsettings.Docker.json
@@ -5,5 +5,8 @@
         "virtualHost": "dagair",
         "protocol": "rabbitmq://",
         "connectionName": "client-node"
+    },
+    "webClientApp": {
+        "environment": "docker"
     }
 }
