--- a/src/DagAir_ClientNode/DagAir.ClientNode/appsettings.json
+++ b/src/DagAir_ClientNode/DagAir.ClientNode/appsettings.json
@@ -17,5 +17,8 @@
     "virtualHost": "dagair",
     "protocol": "rabbitmq://",
     "connectionName": "client-node"
+  },
+  "webClientApp": {
+    "environment": "local"
   }
 }
