--- a/src/DagAir_WebApplications/DagAir.WebClientApp/appsettings.json
+++ b/src/DagAir_WebApplications/DagAir.WebClientApp/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "File": {
+      "Path": "C:/DagAir_Logs/DagAir_WebClientApp_log.txt"
+    }
+  },
+  "AllowedHosts": "*",
+  "environment": "local"
 }
