--- a/src/DagAir_WebApplications/DagAir.WebClientApp/DagAir.WebClientApp.csproj
+++ b/src/DagAir_WebApplications/DagAir.WebClientApp/DagAir.WebClientApp.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
+  </ItemGroup>
+
 </Project>
