DAGAIR-29 Add affiliates and rooms controllers

--- a/src/DagAir.WebApps.WebAdminApp2/appsettings.json
+++ b/src/DagAir.WebApps.WebAdminApp2/appsettings.json
@@ -15,5 +15,6 @@
     "DagAir.Facilities": "https://localhost:15001/",
     "DagAir.IdentityServer": "https://localhost:5001/"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "environment": "local"
 }
