--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/DagAir.WebAdminApp.csproj
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/DagAir.WebAdminApp.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
         <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
