DAGAIR-33 Add organizations and affiliates pages

--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Docker.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Docker.json
@@ -6,7 +6,8 @@
         "protocol": "rabbitmq://",
         "connectionName": "admin-node"
     },
-    "webAdminApp": {
-        "environment": "docker"
+    "serviceUrls": {
+        "webAdminApp": "https://dagair_admin_node_1:443",
+        "DagAir.Facilities": "http://facilities_api"
     }
 }
