--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
@@ -18,7 +18,8 @@
     "protocol": "rabbitmq://",
     "connectionName": "admin-node"
   },
-  "webAdminApp": {
-    "environment": "local"
+  "serviceUrls": {
+    "webAdminApp": "https://localhost:5011/",
+    "DagAir.Facilities": "http://localhost:8087/"
   }
 }
