--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/appsettings.json
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/appsettings.json
@@ -13,7 +13,8 @@
   },
   "serviceUrls": {
     "DagAir.Facilities": "https://localhost:15001/",
-    "DagAir.IdentityServer": "https://localhost:5001/"
+    "DagAir.IdentityServer": "https://localhost:5001/",
+    "DagAir.AdminNode": "http://localhost:19000/"
   },
   "AllowedHosts": "*",
   "environment": "local"
