--- a/src/DagAir_Addresses/DagAir.Addresses/DagAir.Addresses.csproj
+++ b/src/DagAir_Addresses/DagAir.Addresses/DagAir.Addresses.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
       <UserSecretsId>7f666a04-f09c-4749-be36-907cf6ec7833</UserSecretsId>
   </PropertyGroup>
 
