--- a/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
+++ b/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
         <UserSecretsId>104511e6-c03c-473f-8e57-d411bc73813d</UserSecretsId>
     </PropertyGroup>
 
