--- a/src/DagAir.IdentityServer/appsettings.Docker.json
+++ b/src/DagAir.IdentityServer/appsettings.Docker.json
@@ -3,9 +3,9 @@
         "DefaultConnection": "server=host.docker.internal;database=DagAir.Identity;user=root;password=Rolka7Sushi"
     },
     "serviceUrls": {
-        "DagAir.WebAdminApp": "https://host.docker.internal:8085"
+        "DagAir.WebAdminApp": "https://localhost:8085/"
     },
-    "hostname": "https://identity_server",
+    "hostname": "https://host.docker.internal:5001/",
     "certificate":{
         "name": "/https/DagAir.IdentityServer.pfx",
         "password": "12345"
