--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Docker.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Docker.json
@@ -7,7 +7,7 @@
         "connectionName": "admin-node"
     },
     "serviceUrls": {
-        "webAdminApp": "https://dagair_admin_node_1:443",
-        "DagAir.Facilities": "http://facilities_api"
+        "webAdminApp": "https://localhost:8085/",
+        "DagAir.Facilities": "http://facilities_api/"
     }
 }
