--- a/src/DagAir_WebApplications/DagAir.WebAdminApp/appsettings.Docker.json
+++ b/src/DagAir_WebApplications/DagAir.WebAdminApp/appsettings.Docker.json
@@ -1,8 +1,7 @@
 {
     "serviceUrls": {
-        "DagAir.Facilities": "https://dagair_facilities_1:443/",
         "DagAir.IdentityServer": "https://host.docker.internal:5001/",
-        "DagAir.AdminNode": "https://localhost:19000/"
+        "DagAir.AdminNode": "http://host.docker.internal:8088/"
     },
     "environment": "docker"
 }
