--- a/src/DagAir.IdentityServer/Properties/launchSettings.json
+++ b/src/DagAir.IdentityServer/Properties/launchSettings.json
@@ -7,6 +7,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001"
+    },
+    "Docker": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Docker"
+      },
+      "applicationUrl": "https://localhost:5001"
     }
   }
 }
