--- a/src/DagAir_Facilities/DagAir.Facilities/Properties/launchSettings.json
+++ b/src/DagAir_Facilities/DagAir.Facilities/Properties/launchSettings.json
@@ -5,10 +5,10 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:15001;http://localhost:15000",
+      "applicationUrl": "http://localhost:15000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "https://localhost:15001"
+        "ASPNETCORE_URLS": "http://localhost:15000"
       }
     }
   }
