--- a/src/DagAir.IdentityServer/appsettings.json
+++ b/src/DagAir.IdentityServer/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "server=localhost;database=DagAir.Identity;user=root;password=Rolka7Sushi"
   },
   "serviceUrls": {
-    "DagAir.WebAdminApp": "https://localhost:5011"
+    "DagAir.WebAdminApp": "https://localhost:5011/"
   },
-  "hostname": "https://localhost:5001"
+  "hostname": "https://localhost:5001/"
 }
