--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
@@ -20,6 +20,7 @@
   },
   "serviceUrls": {
     "webAdminApp": "https://localhost:5011/",
-    "DagAir.Facilities": "http://localhost:15000/"
+    "DagAir.Facilities": "http://localhost:15000/",
+    "DagAir.Addresses": "http://localhost:10000/"
   }
 }
