--- a/src/DagAir_AdminNode/DagAir.AdminNode/DagAir.AdminNode.csproj
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/DagAir.AdminNode.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\DagAir.AdminNode.Contracts\DagAir.AdminNode.Contracts.csproj" />
+      <ProjectReference Include="..\..\DagAir_Addresses\DagAir.Addresses.Contracts\DagAir.Addresses.Contracts.csproj" />
       <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.ApiModels\DagAir.Components.ApiModels.csproj" />
       <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
       <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.HttpClients\DagAir.Components.HttpClients.csproj" />
