--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Docker.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.Docker.json
@@ -8,6 +8,7 @@
     },
     "serviceUrls": {
         "webAdminApp": "https://localhost:8085/",
-        "DagAir.Facilities": "http://facilities_api/"
+        "DagAir.Facilities": "http://facilities_api/",
+        "DagAir.Addresses": "http://addresses_api/"
     }
 }
