--- a/src/DagAir_Sensors/DagAir.Sensors/DagAir.Sensors.csproj
+++ b/src/DagAir_Sensors/DagAir.Sensors/DagAir.Sensors.csproj
@@ -22,6 +22,7 @@
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
     </ItemGroup>
 
 </Project>
