--- a/src/DagAir_WebApplications/Dockerfile.WebAdminApp
+++ b/src/DagAir_WebApplications/Dockerfile.WebAdminApp
@@ -10,6 +10,8 @@ COPY ["./DagAir_Components/DagAir.Components.Logging/", "./DagAir_Components/Dag
 COPY ["./DagAir_Components/DagAir.Components.HttpClients/", "./DagAir_Components/DagAir.Components.HttpClients/"]
 COPY ["./DagAir_Components/DagAir.Components.ApiModels/", "./DagAir_Components/DagAir.Components.ApiModels/"]
 COPY ["./DagAir_Facilities/DagAir.Facilities.Contracts/", "./DagAir_Facilities/DagAir.Facilities.Contracts/"]
+COPY ["./DagAir_AdminNode/DagAir.AdminNode.Contracts/", "./DagAir_AdminNode/DagAir.AdminNode.Contracts/"]
+COPY ["./DagAir_Addresses/DagAir.Addresses.Contracts/", "./DagAir_Addresses/DagAir.Addresses.Contracts/"]
 
 RUN dotnet restore ./DagAir_WebApplications/DagAir.WebAdminApp/DagAir.WebAdminApp.csproj
 RUN dotnet build ./DagAir_WebApplications/DagAir.WebAdminApp/DagAir.WebAdminApp.csproj --no-restore
