DAGAIR-38 Fix connection string

--- a/src/DagAir_Addresses/DagAir.Addresses/appsettings.Docker.json
+++ b/src/DagAir_Addresses/DagAir.Addresses/appsettings.Docker.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DagAir.Policies": "server=host.docker.internal;database=DagAir.Addresses;user=root;password="
+    "DagAir.Addresses": "server=host.docker.internal;database=DagAir.Addresses;user=root;password="
   }
 }
