--- a/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/appsettings.json
@@ -21,7 +21,7 @@
     "connectionName": "admin-node"
   },
   "serviceUrls": {
-    "webAdminApp": "https://localhost:5011/",
+    "webAdminApp": "http://localhost:4000/",
     "DagAir.Facilities": "http://localhost:15000/",
     "DagAir.Addresses": "http://localhost:10000/"
   }
