--- a/src/DagAir_WebApplications/DagAir.WebClientApp/wwwroot/js/appsettings.json
+++ b/src/DagAir_WebApplications/DagAir.WebClientApp/wwwroot/js/appsettings.json
@@ -1,1 +1,1 @@
-data = '{ "ClientNodeHub": "http://localhost:14000/chatHub" }';
+data = '{ "ClientNodeHub": "http://localhost:14000/hubs/chatHub" }';
