--- a/src/DagAir_WebApplications/WebAdminApp1/wwwroot/js/appsettings.Kubernetes.json
+++ b/src/DagAir_WebApplications/WebAdminApp1/wwwroot/js/appsettings.Kubernetes.json
@@ -1,1 +1,1 @@
-data = '{ "AdminNodeHub": "http://admin-node:8088/chatHub" }';
+data = '{ "AdminNodeHub": "https://hello-world.info/hubs/chatHub" }';
