--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: "3.9"
 
 services:
+  redis:
+    image: redis
+    ports:
+    - 6379:6379
+
+  notification-producer:
+    image: realtime/notification-producer
+    depends_on: ["redis"]
+
   influxdb:
     image: influxdb:2.0.8
     container_name: influxdb1
@@ -65,7 +74,7 @@ services:
       target: final
       context: ./src
       dockerfile: ./DagAir_Facilities/Dockerfile
-    image: facilities_api:1.0
+    image: facilities-api:1.0
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ConnectionKeys__DagAir.Facilities=${FACILITIES_CONNECTIONKEYS}
@@ -130,6 +139,7 @@ services:
       - "8084:80"
     depends_on:
       - rabbitmq
+      - redis
     networks:
       - dagair_network
     restart: always
@@ -145,6 +155,7 @@ services:
       - "8088:80"
     depends_on:
       - rabbitmq
+      - redis
     networks:
       - dagair_network
     restart: always
