--- a/ingress.yml
+++ b/ingress.yml
@@ -2,6 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: example-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/affinity: cookie
+    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
+    nginx.ingress.kubernetes.io/session-cookie-name: REALTIMESERVERID
+    nginx.org/websocket-services: "admin-node"
 spec:
   tls:
     - hosts:
@@ -40,3 +47,11 @@ spec:
                 name: addresses-api
                 port:
                   number: 8094
+
+          - path: /hubs
+            pathType: Prefix
+            backend:
+              service: 
+                name: admin-node
+                port: 
+                  number: 8088
