--- a/src/DagAir_AdminNode/DagAir.AdminNode/DagAir.AdminNode.csproj
+++ b/src/DagAir_AdminNode/DagAir.AdminNode/DagAir.AdminNode.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" />
         <PackageReference Include="IdentityModel" Version="5.2.0" />
+        <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
     </ItemGroup>
 
 </Project>
