--- a/.github/workflows/continuous-delivery.addresses.yml
+++ b/.github/workflows/continuous-delivery.addresses.yml
@@ -3,7 +3,7 @@ name: CD-Addresses
 env:
   SERVICE_NAME: dagair-addresses
   MIGRATIONS_APPLIER_NAME: dagair-addresses-database-migration-applier
-  CONTAINER_REGISTRY: dagairacr.azurecr.io
+  CONTAINER_REGISTRY: dagair.azurecr.io
 
 on:
   push:
@@ -13,7 +13,7 @@ on:
     paths:
       - src/DagAir_Addresses/**
 
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   docker-build-and-push:
