--- a/.github/workflows/continuous-delivery.client-node.yml
+++ b/.github/workflows/continuous-delivery.client-node.yml
@@ -2,7 +2,7 @@ name: CD-Client-node
 
 env:
   SERVICE_NAME: dagair-client-node
-  CONTAINER_REGISTRY: dagairacr.azurecr.io
+  CONTAINER_REGISTRY: dagair.azurecr.io
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
     paths:
       - src/DagAir_ClientNode/**
 
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   docker-build-and-push:
