--- a/.github/workflows/continuous-delivery.policies.yml
+++ b/.github/workflows/continuous-delivery.policies.yml
@@ -3,7 +3,7 @@ name: CD-Policies
 env:
   SERVICE_NAME: dagair-policies
   MIGRATIONS_APPLIER_NAME: dagair-policies-database-migration-applier
-  CONTAINER_REGISTRY: dagairacr.azurecr.io
+  CONTAINER_REGISTRY: dagair.azurecr.io
 
 on:
   push:
@@ -13,7 +13,7 @@ on:
     paths:
       - src/DagAir_Policies/**
 
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   docker-build-and-push:
