--- a/.github/workflows/continuous-delivery.policy-node.yml
+++ b/.github/workflows/continuous-delivery.policy-node.yml
@@ -5,14 +5,13 @@ env:
   CONTAINER_REGISTRY: dagair.azurecr.io
 
 on:
+  workflow_dispatch: # allows to trigger workflow on demand
   push:
     branches: 
       - main
       - develop
     paths:
       - src/DagAir_PolicyNode/**
-
-  workflow_dispatch:
 
 jobs:
   docker-build-and-push:
