--- a/.github/workflows/continuous-delivery.sensors.yml
+++ b/.github/workflows/continuous-delivery.sensors.yml
@@ -6,14 +6,13 @@ env:
   CONTAINER_REGISTRY: dagair.azurecr.io
 
 on:
+  workflow_dispatch: # allows to trigger workflow on demand
   push:
     branches: 
       - main
       - develop
     paths:
       - src/DagAir_Sensors/**
-
-  workflow_dispatch:
 
 jobs:
   docker-build-and-push:
