--- a/.github/workflows/continuous-delivery.sensors.yml
+++ b/.github/workflows/continuous-delivery.sensors.yml
@@ -3,7 +3,7 @@ name: CD-Sensors
 env:
   SERVICE_NAME: dagair-sensors
   MIGRATIONS_APPLIER_NAME: dagair-sensors-database-migration-applier
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairACR.azurecr.io
 
 on:
   workflow_dispatch: # allows to trigger workflow on demand
