--- a/.github/workflows/continuous-delivery.facilities.yml
+++ b/.github/workflows/continuous-delivery.facilities.yml
@@ -3,7 +3,7 @@ name: CD-Facilities
 env:
   SERVICE_NAME: dagair-facilities
   MIGRATIONS_APPLIER_NAME: dagair-facilities-database-migration-applier
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairACR.azurecr.io
 
 on:
   workflow_dispatch: # allows to trigger workflow on demand
