--- a/.github/workflows/continuous-delivery.policies.yml
+++ b/.github/workflows/continuous-delivery.policies.yml
@@ -3,7 +3,7 @@ name: CD-Policies
 env:
   SERVICE_NAME: dagair-policies
   MIGRATIONS_APPLIER_NAME: dagair-policies-database-migration-applier
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairACR.azurecr.io
 
 on:
   workflow_dispatch: # allows to trigger workflow on demand
