--- a/.github/workflows/continuous-delivery.webadminapp.yml
+++ b/.github/workflows/continuous-delivery.webadminapp.yml
@@ -2,7 +2,7 @@ name: CD-WebAdminApp
 
 env:
   SERVICE_NAME: dagair-web-admin-app
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairACR.azurecr.io
 
 on:
   workflow_dispatch: # allows to trigger workflow on demand
