--- a/.github/workflows/continuous-delivery.webclientapp.yml
+++ b/.github/workflows/continuous-delivery.webclientapp.yml
@@ -2,7 +2,7 @@ name: CD-Webclientapp
 
 env:
   SERVICE_NAME: dagair-web-client-app
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairACR.azurecr.io
 
 on:
   workflow_dispatch: # allows to trigger workflow on demand
