--- a/src/DagAir_WebApplications/WebAdminApp1/appsettings.json
+++ b/src/DagAir_WebApplications/WebAdminApp1/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=DagAir.Identity;user=root;password=Rolka7Sushi"
+    "DefaultConnection": "server=localhost;database=DagAir.Identity1;user=root;password="
+  },
+  "ConnectionKeys": {
+    "DagAir.Identity": "12345"
   },
   "Logging": {
     "LogLevel": {
