--- a/.github/workflows/continuous-integration.admin-node.yml
+++ b/.github/workflows/continuous-integration.admin-node.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Check application docker build - admin node
         run: |
+          DOCKER_BUILDKIT=1 \
           docker build \
           -f ./src/DagAir_AdminNode/Dockerfile \
           ./src
