--- a/.github/workflows/continuous-delivery.admin-node.yml
+++ b/.github/workflows/continuous-delivery.admin-node.yml
@@ -59,6 +59,7 @@ jobs:
 
     - name: Check application docker build - admin node
       run: |
+        DOCKER_BUILDKIT=1 \
         docker build \
         -f ./src/DagAir_AdminNode/Dockerfile \
         --tag ${{ env.APP_IMAGE_TAG }} \
