DAGAIR-42 Add webadminapp migrations project

--- a/src/DagAir_WebApplications/WebAdminApp1/wwwroot/js/appsettings.Kubernetes.json
+++ b/src/DagAir_WebApplications/WebAdminApp1/wwwroot/js/appsettings.Kubernetes.json
@@ -1,1 +1,1 @@
-data = '{ "AdminNodeHub": "https://hello-world.info/hubs/chatHub" }';
+data = '{ "AdminNodeHub": "https://dagairsystem-ingress.westeurope.cloudapp.azure.com/hubs/chatHub" }';
